[package]
name = "visage"
version = "0.0.1"
authors = ["kivimango <balazsviktor23@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Disabling Unwinding
# This disables the generation of unwinding symbol information and thus considerably reduces binary size and sets the panic strategy to abort.
# By default, Rust uses stack unwinding to run the destructors of all live stack variables in case of a panic.
# This ensures that all used memory is freed and allows the parent thread to catch the panic and continue execution. Unwinding, however, is a complicated process
# and requires some OS specific libraries (e.g. libunwind on Linux or structured exception handling on Windows).
# Note: the eh_personality language item should no longer be required for building.
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.8.3"

spin = "0.5.2"
volatile = "0.2.6"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]